<resources>

    <string name="app_name">飞鸟</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="login">登录</string>
    <string name="find_password">找回密码</string>
    <string name="userregister">用户注册</string>
    <string name="email_address">请输入邮箱地址</string>
    <string name="email_hint">请确保邮箱地址的有效性，邮箱地址将作为登录帐号使用。</string>
    <string name="next">下一步</string>
    <string name="validate_code">请输入验证码</string>
    <string name="validate_code_hint">验证码已发送到以下邮箱：</string>
    <string name="title_register">用户注册</string>
    <string name="password_hint">注：密码长度为6–16个字符，不能包含空格，不能是9位以下纯数字</string>
    <string name="title_validate_code">填写验证码</string>
    <string name="title_password">填写密码</string>
    <string name="nickname_hint">输入昵称</string>
    <string name="password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="groups">群组</string>
    <string name="search">查找</string>
    <string name="add">添加</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_hint">请输入邮箱地址进行查找。</string>
    <string name="email">邮箱</string>
    <string name="back">返回</string>
    <string name="prompt">温馨提示</string>
    <string name="new_friends">新朋友</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="edit_data">编辑资料</string>
    <string name="finish">完成</string>
    <string name="signature">个性签名</string>
    <string name="nickname">昵称</string>
    <string name="find_hint">请输入注册时所用邮箱。</string>
    <string name="new_password">新密码</string>
    <string name="confirm">确认</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!-- 缺省的登录设置 -->
    <bool name="is_remember">false</bool>
    <bool name="is_autologin">false</bool>
    <bool name="is_novisible">false</bool>

</resources>