<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/theme_margin"
    android:paddingRight="@dimen/theme_margin" >

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/fillet"
        android:hint="@string/nickname_hint"
        android:inputType="text"
        android:paddingLeft="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:singleLine="true"
        android:textSize="@dimen/theme_textsize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/fillet"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:singleLine="true"
        android:textSize="@dimen/theme_textsize" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/fillet"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/text_margin"
        android:paddingRight="@dimen/text_margin"
        android:singleLine="true"
        android:textSize="@dimen/theme_textsize" />

    <TextView
        android:id="@+id/password_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="15dp"
        android:text="@string/password_hint"
        android:textColor="@color/text_black"
        android:textSize="@dimen/hint_textsize" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg_blue"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/theme_textsize" >
    </Button>

</LinearLayout>