<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/theme_margin"
    android:paddingRight="@dimen/theme_margin"
    android:background="@color/bg_color"
    android:orientation="vertical" >


        <TextView
            android:id="@+id/email_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="15dp"
            android:text="@string/email_hint"
            android:textColor="@color/text_black"
            android:textSize="@dimen/hint_textsize" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/fillet"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:singleLine="true"
            android:textSize="@dimen/theme_textsize" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:background="@drawable/btn_bg_blue"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/theme_textsize" >
        </Button>

</LinearLayout>