<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chat_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/titlebar_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/title_bar_textsize" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/titlebar_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/group_item_height"
        android:background="@color/bar_color"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/theme_margin"
        android:paddingRight="@dimen/theme_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/stroke_fillet" >

            <ImageView
                android:id="@+id/search_iv"
                android:layout_width="21dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:src="@drawable/search_icon" />

            <EditText
                android:id="@+id/search_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_height"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/search_iv"
                android:background="@null"
                android:hint="@string/search"
                android:inputType="textEmailAddress"
                android:paddingRight="@dimen/text_margin"
                android:singleLine="true"
                android:textSize="@dimen/theme_textsize" />
        </RelativeLayout>
    </LinearLayout>
    
    <com.free.ui.view.XExpandableListView
            android:id="@+id/expandable_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/list_item_anim" />

</LinearLayout>