<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingLeft="@dimen/theme_margin"
    android:paddingRight="@dimen/theme_margin" >

        <LinearLayout
            android:id="@+id/validate_code_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_text_height"
                android:layout_marginTop="15dp"
                android:text="@string/validate_code_hint"
                android:textColor="@color/text_black"
                android:textSize="@dimen/hint_textsize" />

            <TextView
                android:id="@+id/email_address_hint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_text_height"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:paddingLeft="20dp"
                android:textColor="@color/text_black"
                android:textSize="@dimen/hint_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/validate_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/validate_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="3"
                android:background="@drawable/fillet"
                android:hint="@string/validate_code"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:singleLine="true"
                android:textSize="@dimen/theme_textsize" />

            <Button
                android:id="@+id/resend_mail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/btn_bg_gray"
                android:onClick="resend"
                android:textColor="@color/text_black"
                android:textSize="@dimen/theme_textsize" >
            </Button>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:background="@drawable/btn_bg_blue"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/theme_textsize" >
        </Button>

</LinearLayout>