<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/chat_bg" >

        <LinearLayout
            android:id="@+id/notice_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/notice_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/notice_unselected" />

            <TextView
                android:id="@+id/notice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/message"
                android:textColor="#82858b" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/contacts_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tab_height"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/contacts_unselected" />

            <TextView
                android:id="@+id/contacts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/contacts"
                android:textColor="#82858b" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groups_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/groups_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tab_height"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/groups_unselected" />

            <TextView
                android:id="@+id/groups_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/groups"
                android:textColor="#82858b" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>